# starbug1

./: .cvsignore  .gitignore  .htaccess  AUTHORS  COPYING  COPYING_cgic  ChangeLog  Dockerfile  INSTALL  INSTALL_win32  Makefile  Makefile.am  Makefile.in  Makefile.linux  MinGW-compile.bat  README  README.md  admin.c  admin_project.c  admin_project.h  admin_top.c  admin_top.h  alloc.c  alloc.h  check.cgi  config.cache  config.h.in  config.status  configure  configure.in  conv.c  conv.h  css.c  css.h  csv.c  csv.h  data.c  data.h  db.c  db.h  (+32 more)
.deps/: admin.P  data.P  db.P  dbutil.P  index.P  mail.P  util.P  wiki.P
css/: default.css  style.css  top.css  user.css
js/: attachment_file_display_setting_submit.js  calendar.js  circle.js  delete_item.js  edit_top.js  file_upload.js  form_changed.js  graph.js  list.js  management.js  new_item.js  register.js  register_at_once.js  register_at_once_submit.js  reply.js  style.js  ticket_list.js  validate.js
locale/: .cvsignore  .gitignore  en.po  ja.po  messages.po  zh.po  zh_TW.po
locale/ja/LC_MESSAGES/: starbug1.mo
locale/zh/LC_MESSAGES/: starbug1.mo
modules/hook_mail/: .cvsignore  Makefile  config  hook_mail.c
script/: dump_attachmentfiles.pl  pickup_template  pickup_template.sql  post-commit-svn.pl  sample.hook_irc.sh  sample.hook_sendmail.pl  sample.irc.pl  smtp.pl
template/ja_JP/: qa.template  todo.template
test/Selenium/: README.md  starbug1.side  test.html
test/wiki/: .cvsignore  Makefile  ticketlink.c
wiki/: help.wiki  top.wiki
