dnl Process this file with autoconf to produce a configure script.
AC_INIT(index.c)
AM_INIT_AUTOMAKE(bugs-life, 0.0.1, no-define)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(cgic, main)
AC_CHECK_LIB(sqlite3, sqlite3_prepare)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(gettimeofday strstr)

AC_OUTPUT(Makefile)
